assets/css/styling.css
/*General styling*/

* {
	margin:0;
	padding: 0;
	box-sizing: border-box;
}

html {
	font: normal 16px sans-serif;
	color: #555;
}

ul, nav {
	list-style: none;
}

a {
	text-decoration: none;
	opacity:0.75;
	color: #fff;
}

a:hover {
	opacity: 1;
}

/*Header Styles*/

header {
	position: absolute;
	width: 100%;
	display: flex;
	flex-direction:row;
	justify-content: space-between;
	align-items: center;
	padding:0 100px;
	min-height: 100px;
	animation: reveal 0.3s ease-in 0.5s forwards;
	opacity:0;
	transform: translateY(5px);
	z-index: 1;
	color: #fff;
}

@keyframes reveal {
	
	100%{
		opacity:1;
		transform: translateY(0px);
	}
	
}

header nav {
	display: flex;
	justify-content: space-around;

}

header nav li {
	margin: 0 10px;
}

header h2 {
	font-family: "Quicksand", sans-serif;
}




/*Landing Styles*/

.landing-background{
	background-image: url(../img/main.jpg);
}

a.btn {
	border-radius: 20px;
	text-transform: uppercase;
	font-weight:bold;
	text-align: center;
	background-color:  #3f51b5;
	opacity: 1;
	padding: 20px 46px;
	/*box-shadow: 0px 0px 2px #fff;*/
	transition-duration: 0.3s;
}

a.btn:hover {
	box-shadow: 0px 0px 30px #fff;
}

a.btn:active {
	box-shadow: inset 0px 0px 8px #000;
}

section {
	display: flex;
	flex-direction: column;
	align-items: center;
	padding: 100px;
}

.landing {
	position: relative;
	justify-content: center;
	text-align: center;
	min-height:100vh;
	color: #fff;
}

.landing-background {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height:100%;
	background-size: cover;
	z-index:-1;
	background-color: #80a3db;
}

.landing h1 {
	font: bold 60px "Open Sans", sans-serif;
	margin-bottom: 15px;
}

.landing h3 {
	font: normal 28px "Open Sans", sans-serif;
	margin-bottom: 40px;
}

.landing a.btn {
	font: normal 28px "Open Sans", sans-serif;
	margin-bottom: 40px;
}

.landing-content-area{
	opacity:0;
	margin-top: 60px;
	transform: translateY(100px);
	animation: reveal 1s ease-in-out 1s forwards;
	;
}

/*SECTIONS STYLES*/

section:not(.landing):nth-child(even){
	background-color: #f5f5f5;
}

section .title {
	text-transform: capitalize;
	font: bold 32px "Open Sans", sans-serif;
	margin-bottom: 30px;
	text-align: center;
}

section p {
	max-width: 775px;
	line-height: 2;
	padding: 0 20px;
	margin-bottom: 30px;
	text-align: center;
}

hr {
	width: 250px;
	height: 3px;
	background-color: #3f51b5;
	border: 0;
	margin-bottom: 50px;
	opacity: 0.5;
}

.first-section-grid li {
	height: 350px;
	padding: 20px;
	margin: 1%;
	background-clip: border-box;
	background-size: cover;
	background-position: center;
	border-radius: 20px;
}

.first-section-grid {
	width: 100%;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	
}

.first-section-grid .small {
	flex-basis: 30%;
}

.first-section-grid .large {
	flex-basis: 66%;
	
}

.first-section-grid #picture1 {
	background-image: url(../img/mountain1.jpg);
}

.first-section-grid #picture2 {
	background-image: url(../img/mountain2.jpg);
}

.first-section-grid #picture3 {
	background-image: url(../img/mountain3.jpg);
}

.first-section-grid #picture4 {
	background-image: url(../img/mountain4.jpg);
}

/*second section styling*/

.second-section-grid {
	width: 100%;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

.second-section-grid li {
	padding: 50px;
	flex-basis: 50%;
	text-align: center;
}

.second-section-grid li i{
	color: #8c9eff;
}

.second-section-grid li h4{
	font-size: 30px;
	margin: 25px 0;
}

/*Testimonials section*/

.testimonials-section .quote {
	font-size: 22px;
	font-weight: 300px;
	line-height: 1.5;
	margin: 40px 0 15px;
}

/*Contacts section*/

.contact-section form {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-wrap: wrap;
	width:60%;
}

.contact-section form input {
	padding:18px 42px;
}

.contact form input {
	padding:15px;
	margin-right: 30px;
	font-size: 18px;
	color: 555;
	flex: 1;
}

/*Footer section*/

footer {
	display: flex;
	align-items: center;
	justify-content: space-around;
	background-color: #607d8b;
	color: #fff;
	padding: 20px 0;
}

footer ul {
	display: flex;
}

footer ul li {
	margin-left: 16px;
}

footer p {
	text-transform: uppercase;
	font-size: 14px;
	opacity: 0.6;
	align-self: center;
}

